--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="index2.html">Demo 2</a></li>
     <li><a href="index3.html">Demo 3</a></li>
     <li><a href="index4.html">Demo 4</a></li>
+    <li><a href="index5.html">Demo 5</a></li>
   </ul>
 
 </body>
